@@ -1,5 +1,5 @@
-document.URL: file:///Users/weinig/Code/webkit/OpenSource/LayoutTests/fast/dom/Window/resources/notify-opener-done.html
-window.document.URL: file:///Users/weinig/Code/webkit/OpenSource/LayoutTests/fast/dom/Window/resources/notify-opener-done.html
+document.URL: LayoutTests/fast/dom/Window/resources/notify-opener-done.html
+window.document.URL: LayoutTests/fast/dom/Window/resources/notify-opener-done.html
 name: child
 window.name: child
 
