@@ -1,9 +1,14 @@
 <script>
     parent.accessFrame = function()
     {
+        function normalizeURL(url)
+        {
+            return url.substring(url.lastIndexOf("LayoutTests"));
+        }
+
         try {
-            parent.log("document.URL: " + document.URL);
-            parent.log("window.document.URL: " + window.document.URL);
+            parent.log("document.URL: " + normalizeURL(document.URL));
+            parent.log("window.document.URL: " + normalizeURL(window.document.URL));
             parent.log("name: " + name);
             parent.log("window.name: " + window.name);
         } catch (e) {
